--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.1",
+    "@tabler/icons-react": "^3.29.0",
     "@tailwindcss/vite": "^4.0.3",
+    "clsx": "^2.1.1",
+    "motion": "^12.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
+    "react-router-dom": "^7.1.5",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
