--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tabler/icons-react": "^3.29.0",
     "@tailwindcss/vite": "^4.0.3",
     "clsx": "^2.1.1",
+    "firebase": "^11.2.0",
     "motion": "^12.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
